@@ -1,3 +1,8 @@
+2022-12-20  Shahab Vahedi  <shahab@synopsys.com>
+
+	* eblopenbackend.c (arc_init): New function declaration.
+	(machines): Add entry for arc.
+
 2022-12-02  Hengqi Chen  <hengqi.chen@gmail.com>
 
 	* eblopenbackend.c (machines): Add entries for LoongArch.
